add reading notes

--- a/reading-plans/20170314-20170630-plan.md
+++ b/reading-plans/20170314-20170630-plan.md
@@ -19,11 +19,12 @@
 　　详细的学习“Hadoop The Definitive Guide 4th Edition”
 
 #### Schedules
-- [ ] 14/03/2017
+- [x] 14/03/2017
 　　1. Task1
 　　    - Book: Linux Command Line and Shell Scripting Bible; 
         - Chapter: Chapter 3: Basic bash Shell Commands; 
         - Pages: {89, 120}
+        - Finished By: 15/03/2017 23:31
 
 - [ ] 15/03/2017
 　　1. Task1
