add reading note

--- a/reading-plans/20170314-20170630-plan.md
+++ b/reading-plans/20170314-20170630-plan.md
@@ -25,6 +25,7 @@
         - Chapter: Chapter 3: Basic bash Shell Commands; 
         - Pages: {89, 120}
         - Finished By: 15/03/2017 23:31
+        - [Reading Notes](../reading-notes/linux/Linux Command Line and Shell Scripting Bible/Basic bash Shell Commands.md)
 
 - [ ] 15/03/2017
 　　1. Task1
