add reading notes

--- a/reading-plans/20170314-20170630-plan.md
+++ b/reading-plans/20170314-20170630-plan.md
@@ -27,11 +27,14 @@
         - Finished By: 15/03/2017 23:31
         - [Reading Notes](../reading-notes/linux/Linux Command Line and Shell Scripting Bible/Basic bash Shell Commands.md)
 
-- [ ] 15/03/2017
+- [X] 15/03/2017
 　　1. Task1
         - Book: Linux Command Line and Shell Scripting Bible; 
         - Chapter: Chapter 4: More bash Shell Commands; 
         - Pages: {121, 152}
+        - Finished By: 26/03/2017 23:00
+        - [Reading Notes](../reading-notes/linux/Linux Command Line and Shell Scripting Bible/More bash Shell Commands.md)
+        - Remark: 这短时间被找工作打乱了节奏，临时准备找工作的知识。
 
 - [ ] 16/03/2017
     1. Task1
