add reading notes

--- a/reading-plans/20170314-20170630-plan.md
+++ b/reading-plans/20170314-20170630-plan.md
@@ -36,17 +36,21 @@
         - [Reading Notes](../reading-notes/linux/Linux Command Line and Shell Scripting Bible/More bash Shell Commands.md)
         - Remark: 这短时间被找工作打乱了节奏，临时准备找工作的知识。
 
-- [ ] 16/03/2017
+- [X] 16/03/2017
     1. Task1
         - Book: Linux Command Line and Shell Scripting Bible; 
         - Chapter: Chapter 5: Using Linux Environment Variables; 
         - Pages: {153, 176}
+        - Finished By: 27/03/2017 7:59
+        - [Reading Notes](../reading-notes/linux/Linux Command Line and Shell Scripting Bible/Using Linux Environment Variables.md)
 
-- [ ] 17/03/2017 ~ 19/03/2017
+- [X] 17/03/2017 ~ 19/03/2017
     1. Task1
         - Book: Linux Command Line and Shell Scripting Bible; 
         - Chapter: Chapter 6: Understanding Linux File Permissions; 
         - Pages: {177, 200}
+        - Finished By: 27/03/2017 23:00
+        - [Reading Notes](../reading-notes/linux/Linux Command Line and Shell Scripting Bible/Understanding Linux File Permissions.md)
 
 - [ ] 20/03/2017
     1. Task1
