add reading notes

--- a/reading-plans/20170314-20170630-plan.md
+++ b/reading-plans/20170314-20170630-plan.md
@@ -59,11 +59,13 @@
         - Pages: {201, 206}
         - Remark: The emacs Editor and KDE family are not necessary, so kip them now.
 
-- [ ] 21/03/2017
+- [X] 21/03/2017
     1. Task1
         - Book: Linux Command Line and Shell Scripting Bible; 
         - Chapter: Chapter 8: Basic Script Building; 
         - Pages: {231, 258}
+        - Finished By: 29/03/2017 20:18
+        - [Reading Notes](../reading-notes/linux/Linux Command Line and Shell Scripting Bible/Basic Script Building.md)
         
 - [ ] 22/03/2017
     1. Task1
