add reading notes

--- a/reading-plans/20170314-20170630-plan.md
+++ b/reading-plans/20170314-20170630-plan.md
@@ -67,11 +67,13 @@
         - Finished By: 29/03/2017 20:18
         - [Reading Notes](../reading-notes/linux/Linux Command Line and Shell Scripting Bible/Basic Script Building.md)
         
-- [ ] 22/03/2017
+- [X] 22/03/2017
     1. Task1
         - Book: Linux Command Line and Shell Scripting Bible; 
         - Chapter: Chapter 9: Using Structured Commands; 
         - Pages: {259, 284}
+        - - Finished By: 30/03/2017 23:22
+        - [Reading Notes](../reading-notes/linux/Linux Command Line and Shell Scripting Bible/Using Structured Commands.md)
     
 - [ ] 23/03/2017
     1. Task1
