add reading notes

--- a/reading-plans/20170314-20170630-plan.md
+++ b/reading-plans/20170314-20170630-plan.md
@@ -72,14 +72,16 @@
         - Book: Linux Command Line and Shell Scripting Bible; 
         - Chapter: Chapter 9: Using Structured Commands; 
         - Pages: {259, 284}
-        - - Finished By: 30/03/2017 23:22
+        - Finished By: 30/03/2017 23:22
         - [Reading Notes](../reading-notes/linux/Linux Command Line and Shell Scripting Bible/Using Structured Commands.md)
     
-- [ ] 23/03/2017
+- [X] 23/03/2017
     1. Task1
         - Book: Linux Command Line and Shell Scripting Bible; 
         - Chapter: Chapter 10: More Structured Commands; 
         - Pages: {285, 314}
+        - Finished By: 31/03/2017 23:00
+        - [Reading Notes](../reading-notes/linux/Linux Command Line and Shell Scripting Bible/More Structured Commands.md)
 
 - [ ] 24/03/2017 ~ 26/03/2017
     1. Task1
