--- a/reading-plans/20170314-20170630-plan.md
+++ b/reading-plans/20170314-20170630-plan.md
@@ -83,11 +83,13 @@
         - Finished By: 31/03/2017 23:00
         - [Reading Notes](../reading-notes/linux/Linux Command Line and Shell Scripting Bible/More Structured Commands.md)
 
-- [ ] 24/03/2017 ~ 26/03/2017
+- [X] 24/03/2017 ~ 26/03/2017
     1. Task1
         - Book: Linux Command Line and Shell Scripting Bible; 
         - Chapter: Chapter 11: Handling User Input; 
         - Pages: {215, 342}
+        - Finished By: 07/04/2017 21:13
+        - [Reading Notes](../reading-notes/linux/Linux Command Line and Shell Scripting Bible/Handling User Input.md)
     2. Task2
         - Book: Linux Command Line and Shell Scripting Bible; 
         - Chapter: Chapter 9、Chapter10、Chapter 11; 
@@ -99,7 +101,7 @@
         - Pages: {259, 314}
         - Remark: Review Structured Commands and do more exercises.
 
-- [ ] 27/03/2017
+- [] 27/03/2017
     1. Task1
         - Book: Linux Command Line and Shell Scripting Bible; 
         - Chapter: Chapter 12: Presenting Data; 
