add reading notes

--- a/reading-plans/20170314-20170630-plan.md
+++ b/reading-plans/20170314-20170630-plan.md
@@ -101,11 +101,13 @@
         - Pages: {259, 314}
         - Remark: Review Structured Commands and do more exercises.
 
-- [] 27/03/2017
+- [X] 27/03/2017
     1. Task1
         - Book: Linux Command Line and Shell Scripting Bible; 
         - Chapter: Chapter 12: Presenting Data; 
         - Pages: {343, 364}
+        - Finished By: 07/04/2017 20:09
+        - [Reading Notes](../reading-notes/linux/Linux Command Line and Shell Scripting Bible/Presenting Data.md)
 
 - [ ] 28/03/2017
     1. Task1
