--- a/reading-plans/20170314-20170630-plan.md
+++ b/reading-plans/20170314-20170630-plan.md
@@ -109,11 +109,13 @@
         - Finished By: 07/04/2017 20:09
         - [Reading Notes](../reading-notes/linux/Linux Command Line and Shell Scripting Bible/Presenting Data.md)
 
-- [ ] 28/03/2017
+- [X] 28/03/2017
     1. Task1
         - Book: Linux Command Line and Shell Scripting Bible; 
         - Chapter: Chapter 13: Script Control; 
         - Pages: {365, 390}
+        - Finished By: 13/04/2017 22:15
+        - [Reading Notes](../reading-notes/linux/Linux Command Line and Shell Scripting Bible/Script Control.md)
 
 - [ ] 29/03/2017
     1. Task1
