--- a/development/database/mysql/数据导入导出/数据导入导出.md
+++ b/development/database/mysql/数据导入导出/数据导入导出.md
@@ -1,6 +1,6 @@
 # 从数据库导出数据
 当要备份数据，或者从数据库复制一份数据时，可以通过mysqldump命令导出数据。命令如下：   
-    `$ mysqldump -h ${server_address} -u username -p --opt ${instance_name} > dump.sql`
+    `$ mysqldump -h ${server_address} -u username -p -R -E --default-character-set=utf8 --databases ${instance_name} --single-transaction > dump.sql`
 其中：
 + ${server_address}：是数据库服务器的地址
 + ${instance_name}：数据库实例的名称
@@ -9,6 +9,9 @@
     It gives a fast dump operation and produces a dump file that can be reloaded into a MySQL server quickly.
     Because the --opt option is enabled by default, you only specify its converse, the --skip-opt to turn off several default settings. See the discussion of mysqldump option groups for
     information about selectively enabling or disabling a subset of the options affected by --opt.
++ -R  (--routines:导出存储过程以及自定义函数)
++ -E  (--events:导出事件)
++ --single-transaction 保证导出的过程中，MySQL不会更新数据，从而导出的数据不会出现不一致的情况。
 
 上述命令导出后，是一个可执行的.sql脚本文件。
 
