--- a/development/架构/zookeeper/疑问.md
+++ b/development/架构/zookeeper/疑问.md
@@ -1,5 +1,11 @@
 # ZooKeeper疑问
 
+## 请求的顺序性
+同一个客户端发送给ZooKeeper服务端的多个请求是有序响应的吗？即，当同一个客户端先后发出两个请求Q1、Q2，一定是先收到Q1的响应结果，然后再收到Q2的响应结果吗？
+#### 测试方法
+1. 先异步创建节点，再同步查看节点是否存在，如果出现节点不存在的情况，证明设想错误。
+2. 在创建节点的异步回调中，等待一段时间，查看同步获取节点数据是否可以限制性结束。
+
 ## ZooKeeper应用于集群选主时，如果解决集群脑裂的问题
 集群脑裂是指，集群因为异常原因，导致集群中的主机被分隔为超过1个的小集群，小集群中的主机可以互联，但小集群之间无法联通。
 特别是当发生短暂的脑裂后集群又恢复了，可能导致集群中出现多个Leader，例如：当ZooKeeper检测到Leader链接超时删除Leader的会话，从而另一个主机被选为新的Leader，如果原来的Leader只是经历了短暂的“假死”后又恢复过来，并仍然以为自己是Leader，那么此时将会同时存在两个Leader。
