--- a/development/架构/设计模式/设计原则.md
+++ b/development/架构/设计模式/设计原则.md
@@ -7,6 +7,27 @@
 找出应用中可能需要变化之处，把它们独立出来，不要和哪些不需要变化的代码混在一起。
 
 ## 针对接口编程，而不是针对实现编程
+```
+class Animal {
+
+}
+
+class Dog implements Animal {
+
+}
+
+Class Cat implements Animal {
+
+}
+
+// 下面是针对接口编程
+Animal animal = new Dog();
+
+// 下面是针对实现编程
+Dog dog = new Dog();
+```
 
 ## 多用组合，少用继承
 继承的东西很难改变，如果是经常需要改变的东西，使用组合更合适，将经常需要变化的东西包装成接口组合进来，并且可以在运行时动态的改变组合的内容，参考*策略模式*。
+
+## 为对象之间的松耦合设计而努力
